@@ -12,6 +12,9 @@ o Added a help menu item for viewing CHANGES.txt.
 o The toolbar configuration of each of the guide windows is now saved and
   restored between WEG sessions.
 
+o Added the ability to copy just the highlighted line of an entry to the
+  clipboard.
+
 Changes since v2.11
 ===================
 
